[package]
name = "pidfile-rs"
version = "0.2.0"
authors = ["Andrej Shadura <andrew.shadura@collabora.co.uk>"]
edition = "2018"
description = "Rust wrapper for pidfile_* functions from libbsd/libutil"
documentation = "https://docs.rs/pidfile-rs"
license = "MIT"
repository = "https://github.com/andrewshadura/bsd-pidfile-rs"

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[dependencies]
libc = "0.2"
thiserror = "1.0"
log = "0.4"

[target.'cfg(not(any(target_os = "dragonfly", target_os = "freebsd")))'.build-dependencies]
system-deps = "5"

[package.metadata.system-deps.'cfg(not(any(target_os = "dragonfly", target_os = "freebsd")))']
libbsd = "0.1.6"

[dev-dependencies]
tempfile = "3"
nix = {version = "0.27.0", features = ["process"] }
