[package]
name = "pidfile-rs"
version = "0.3.1"
authors = ["Andrej Shadura <andrew.shadura@collabora.co.uk>"]
edition = "2021"
description = "Rust reimplementation of pidfile_* functions from libbsd/libutil"
documentation = "https://docs.rs/pidfile-rs"
license = "MIT"
repository = "https://github.com/andrewshadura/pidfile-rs"

[dependencies]
libc = "0.2.147"
thiserror = "1.0.22"
log = "0.4.14"
flopen = "0.1.3"

[dev-dependencies]
tempfile = "3"
nix = {version = ">= 0.27.1, <1.0", features = ["process", "fs"] }
